added tests for class cycle check and reverted some change in ClassHierarchyProvider